<resources>
    <string name="app_name">스위캠</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="study_text_camera_off">분석중...</string>
    <string name="study_now_timer">현재 공부 시간</string>
    <string name="study_cumul_timer">누적 공부 시간</string>

    <!-- fragment_statistic -->
    <string name="state_study">공부 상태</string>
    <string name="state_drowsiness">졸음 상태</string>
    <string name="state_space_out">멍 때림 상태</string>

    <string name="statistic_day_title1">오늘의 공부 시간</string>
    <string name="statistic_day_title2">어제의 공부 시간</string>
    <string name="statistic_day_me">어제의 나</string>
    <string name="statistic_day_title3">오늘의 공부 그래프</string>
    <string name="statistic_day_title4">내가 정말 공부한 시간은?</string>

    <string name="statistic_week_title1">이번 주의 공부 시간</string>
    <string name="statistic_week_title2">지난 주의 공부 시간</string>
    <string name="statistic_week_me">지난 주의 나</string>

    <string name="statistic_month_title1">이번 달의 공부 시간</string>
    <string name="statistic_month_title2">지난 달의 공부 시간</string>
    <string name="statistic_month_me">지난 달의 나</string>

    <string name="statistic_graph_less">적게 공부했어요</string>
    <string name="statistic_graph_same">공부했어요</string>
    <string name="statistic_graph_same_time">같은 시간</string>
    <string name="statistic_graph_more">많이 공부했어요</string>

    <string name="statistic_graph_middle_moreless">보다</string>
    <string name="statistic_graph_middle_same">랑</string>

    <string name="statistic_graph_guide_disturb">X -</string>
    <string name="statistic_graph_guide_study">O -</string>


    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- activity menu -->
    <string name="account">내 계정</string>
    <string name="account_nickname">&#160;&#160;&#160;닉네임</string>

    <string name="account_setting">계정 설정</string>
    <string name="account_logout">&#160;&#160;&#160;로그아웃</string>
    <string name="account_withdrawal">&#160;&#160;&#160;탈퇴하기</string>

    <string name="logout_toast">로그아웃! 다음에 또 만나요!</string>
    <string name="withdrawal_title">회원탈퇴</string>
    <string name="withdrawal_context">정말 탈퇴하실건가요?ㅠㅠ</string>
    <string name="withdrawal_toast">탈퇴 처리를 완료하였습니다.\n그동안 사용해주셔서 감사합니다! :)</string>

    <!-- study -->
    <string name="study_hint_msg">공부 시작 전, 카메라 조정이 필요합니다\n되도록 카메라를 정면에 배치해주세요!</string>
    <string name="study_start">시작하기</string>
    <string name="study_empty">현재 자리에 없는 것으로 판단되어 학습을 종료합니다</string>
</resources>