<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.MenuActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="마이페이지"
            style="@style/toolbar_text" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/account_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            style="@style/menu_subTitle" />
        <TextView
            android:id="@+id/account_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="xxx@gmail.com"
            style="@style/menu_subTitle"
            android:layout_marginBottom="15dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nickname_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/menu_button"
            android:drawableLeft="@drawable/ic_person"
            android:text="@string/account_nickname" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/account_setting_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/account_linear"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_setting"
            style="@style/menu_subTitle" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/menu_button"
            android:drawableLeft="@drawable/ic_logout"
            android:text="@string/account_logout" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/withdrawal_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/menu_button"
            android:drawableLeft="@drawable/ic_withdrawal"
            android:text="@string/account_withdrawal" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>