<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ui.statistic.StatisticDayFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:clipToPadding="false"
        android:clipChildren="false">
        <TextView
            style="@style/subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistic_day_title1" />

        <TextView
            android:id="@+id/statistic_today_tv"
            style="@style/timer_text_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_round_background"
            android:elevation="5dp"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="00 : 00 : 00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_round_background"
            android:backgroundTint="@color/darkWhite"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp">

            <TextView
                style="@style/context_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statistic_day_title2" />

            <TextView
                android:id="@+id/statistic_before_tv"
                style="@style/context_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="00 : 00 : 00" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="어제의 나"
            style="@style/mini_text"/>

        <TextView
            android:id="@+id/statistic_day_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="보다"
            android:paddingRight="5dp"
            style="@style/mini_text"/>

        <TextView
            android:id="@+id/statistic_before_gap_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1시간 59분"
            android:layout_marginRight="5dp"
            style="@style/mini_text"/>
        <TextView
            android:id="@+id/statistic_day_context_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistic_graph_more"
            style="@style/mini_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistic_day_title3"
            style="@style/subtitle_text"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/statistic_chart"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@color/lightGray"/>

    </LinearLayout>

</LinearLayout>